implement `isBST()`
this implementation may be broken, i didn't test it